--- a/fetch_file_tool/Makefile
+++ b/fetch_file_tool/Makefile
@@ -3,4 +3,9 @@ all:
 	
 .PHONY:clean
 clean:
-	rm -rf out/* ./*.txt
+	rm -rf out/* ./*.txt test_sample/dest_base test_sample/svn_base
+
+.PHONY:prepare
+prepare:
+	cp -rf ./test_sample/source/dest_base ./test_sample/
+	cp -rf ./test_sample/source/svn_base  ./test_sample/
